--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "html-react-parser": "^1.4.14",
+    "moment": "^2.29.3",
     "next": "12.1.6",
+    "postcss": "^8.4.14",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-multi-carousel": "^2.8.0",
+    "react-responsive": "^9.0.0-beta.10",
+    "sass": "^1.52.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "tailwindcss": "^3.1.2"
   }
 }
