--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-multi-carousel": "^2.8.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-responsive": "^9.0.0-beta.10",
     "sass": "^1.52.2",
     "styled-components": "^5.3.5"
